--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_PASSWORD = password
 DB_DATABASE = reactauthtemplate
 DB_HOST = localhost
 
+MONGODB_URI = mongodb://griffin:Nirvana2@ds235778.mlab.com:35778/heroku_m22ck2cw
