--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
-
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +26,7 @@
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
