--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.1"
   }
 }
