--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "moment": "^2.24.0",
     "react": "^16.6.3",
+    "react-day-picker": "^7.3.2",
     "react-dom": "^16.6.3",
     "react-moment": "^0.9.2",
     "react-router-dom": "^4.3.1",
