--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-day-picker": "^7.3.2",
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.1",
     "semantic-ui": "^2.4.2"
