--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "moment": "^2.24.0",
+    "rc-time-picker": "^3.7.2",
     "react": "^16.6.3",
     "react-day-picker": "^7.3.2",
     "react-dom": "^16.6.3",
     "react-moment": "^0.9.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "react-time-picker": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
