--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "rc-time-picker": "^3.7.2",
     "react-day-picker": "^7.3.2",
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.1",
