--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-day-picker": "^7.3.2",
     "react-dom": "^16.6.3",
     "react-moment": "^0.9.2",
+    "react-phone-number-input": "^2.3.24",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
     "react-time-picker": "^3.7.2"
