--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rc-time-picker": "^3.7.2",
     "react-day-picker": "^7.3.2",
     "react-moment": "^0.9.2",
+    "react-phone-number-input": "^2.3.24",
     "react-router-dom": "^5.0.1",
     "semantic-ui": "^2.4.2"
   }
