--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,19 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "rc-time-picker": "^3.7.2",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-day-picker": "^7.3.2",
     "react-dom": "^16.6.3",
     "react-moment": "^0.9.2",
     "react-phone-number-input": "^2.3.24",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
-    "react-time-picker": "^3.7.2"
+    "react-time-picker": "^3.7.2",
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
