--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "rc-time-picker": "^3.7.2",
+    "react-cool-tabs": "^1.1.6",
     "react-day-picker": "^7.3.2",
     "react-moment": "^0.9.2",
     "react-phone-number-input": "^2.3.24",
     "react-router-dom": "^5.0.1",
-    "semantic-ui": "^2.4.2"
+    "semantic-ui": "^2.4.2",
+    "semantic-ui-react": "^0.88.1"
   }
 }
